force-app/main/default/objects/ssot__CaseProceedingParticipant__dlm/fields/ssot__CaseProceedingId__c.field-meta.xml
<CustomField>
    <fullName>ssot__CaseProceedingId__c</fullName>
    <label>Case Proceeding</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CaseProceedingId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>