force-app/main/default/objects/ssot__CaseProceedingParticipant__dlm/fields/ssot__CaseProceedingParticipantRole__c.field-meta.xml
<CustomField>
    <fullName>ssot__CaseProceedingParticipantRole__c</fullName>
    <label>Case Proceeding Participant Role</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CaseProceedingParticipantRole</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>