force-app/main/default/objects/ssot__CaseProceedingParticipant__dlm/fields/ssot__CaseProceedingParticipationType__c.field-meta.xml
<CustomField>
    <fullName>ssot__CaseProceedingParticipationType__c</fullName>
    <label>Case Proceeding Participation Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CaseProceedingParticipationType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>