force-app/main/default/objects/ssot__CaseProceedingParticipant__dlm/fields/ssot__rel_1718543578660_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1718543578660_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CaseProceedingParticipant_Participan_rel</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>CaseProceedingParticipant_Participan_rel</relationshipLabel>
    <relationshipName>rel_1718543578660_end</relationshipName>
    <type>Lookup</type>
</CustomField>