force-app/main/default/objects/ssot__CaseProceedingParticipant__dlm/fields/ssot__rel_1718549029344_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1718549029344_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CaseProceedingParticipant_CaseProcee_rel</label>
    <referenceTo>ssot__CaseProceeding__dlm</referenceTo>
    <relationshipLabel>CaseProceedingParticipant_CaseProcee_rel</relationshipLabel>
    <relationshipName>rel_1718549029344_end</relationshipName>
    <type>Lookup</type>
</CustomField>